# solenelena

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  docker-compose.yml  railway.connector-echo.json  railway.json  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.claude/: 00-architecture-overview.md  01-agentic-loop.md  02-api-streaming.md  03-tool-system.md  04-context-management.md  05-services.md  06-multi-agent.md  07-state-bootstrap.md  08-commands-skills.md  09-tui-framework.md  10-rust-architecture.md  ARCHITECTURE.md  codebase.md  hannlys.md  solen.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pr-title.yml
bins/elena-connector-echo/: Cargo.toml
bins/elena-connector-echo/src/: lib.rs  main.rs
bins/elena-connector-notion/: Cargo.toml
bins/elena-connector-sheets/: Cargo.toml
bins/elena-connector-shopify/: Cargo.toml
bins/elena-connector-slack/: Cargo.toml
bins/elena-connector-slack/src/: lib.rs  main.rs
bins/elena-hannlys-smoke/: Cargo.toml
bins/elena-hannlys-smoke/src/: main.rs
bins/elena-phase1-smoke/: Cargo.toml
bins/elena-phase1-smoke/src/: main.rs
bins/elena-phase2-smoke/: Cargo.toml
bins/elena-phase2-smoke/src/: main.rs
bins/elena-phase3-smoke/: Cargo.toml
bins/elena-phase4-smoke/: Cargo.toml
bins/elena-phase4-smoke/src/: main.rs
bins/elena-phase5-smoke/: Cargo.toml
bins/elena-phase5-smoke/src/: main.rs
bins/elena-phase6-smoke/: Cargo.toml
bins/elena-phase6-smoke/src/: main.rs
bins/elena-phase7-smoke/: Cargo.toml
bins/elena-phase7-smoke/src/: main.rs
bins/elena-server/: Cargo.toml
bins/elena-server/src/: bootstrap.rs  lib.rs  main.rs
bins/elena-slack-smoke/: Cargo.toml
bins/elena-solen-smoke/: Cargo.toml
bins/elena-solen-smoke/src/: main.rs
bins/elena-tri-tenant-firetest/: Cargo.toml
bins/elena-tri-tenant-firetest/src/: assertions.rs  harness.rs  main.rs  report.rs  video_mock.rs  workload.rs
crates/elena-admin/: Cargo.toml
crates/elena-admin/src/: apps.rs  audit.rs  auth.rs  budget.rs  health.rs  lib.rs  plan_assignments.rs  plans.rs  plugins.rs  router.rs  state.rs  tenant_credentials.rs  tenants.rs  threads.rs  workspaces.rs
crates/elena-auth/: Cargo.toml
crates/elena-auth/src/: admin.rs  jwks.rs  jwt.rs  lib.rs  scope.rs  secret.rs  tls.rs
crates/elena-config/: Cargo.toml  README.md
crates/elena-config/src/: anthropic.rs  cache.rs  context.rs  defaults.rs  lib.rs  logging.rs  postgres.rs  providers.rs  rate_limits.rs  redis.rs  router.rs  validate.rs
crates/elena-connector-echo/: Cargo.toml
crates/elena-context/: Cargo.toml  README.md
crates/elena-context/src/: context_manager.rs  embedder.rs  error.rs  lib.rs  memory.rs  onnx.rs  packer.rs  summarize.rs  summary.rs  tokens.rs
crates/elena-context/tests/: retrieval.rs  summarize.rs
crates/elena-core/: Cargo.toml  README.md
crates/elena-core/src/: checkpoint.rs  context_builder.rs  deps.rs  dispatch_decision.rs  lib.rs  loop_driver.rs  request_builder.rs  state.rs  step.rs  stream_consumer.rs
crates/elena-core/tests/: phase4_loop.rs  round_trip.rs
crates/elena-embedded-plugins/: Cargo.toml
crates/elena-embedded-plugins/src/: lib.rs
crates/elena-gateway/: Cargo.toml  README.md
crates/elena-gateway/src/: app.rs  auth.rs  config.rs  error.rs  fanout.rs  lib.rs  main.rs  nats.rs
crates/elena-gateway/src/routes/: approvals.rs  health.rs  metrics.rs  mod.rs  threads.rs  ws.rs
crates/elena-llm/: Cargo.toml  README.md
crates/elena-llm/src/: anthropic.rs  assembler.rs  cache.rs  events.rs  lib.rs  multiplexer.rs  openai_compat.rs  provider.rs  request.rs  retry.rs  sse.rs  wire.rs
crates/elena-llm/src/wire/: anthropic.rs  mod.rs
crates/elena-llm/tests/: streaming.rs
crates/elena-observability/: Cargo.toml
crates/elena-observability/src/: config.rs  lib.rs  metrics.rs  trace.rs  tracing_init.rs
crates/elena-plugins/: Cargo.toml  README.md  build.rs
crates/elena-plugins/proto/: elena_plugin.proto
crates/elena-plugins/src/: action_tool.rs  client.rs  config.rs  embedded.rs  error.rs  health.rs  id.rs  lib.rs  manifest.rs  proto.rs  registry.rs
crates/elena-plugins/tests/: end_to_end.rs
crates/elena-router/: Cargo.toml  README.md
crates/elena-router/src/: cascade.rs  failover.rs  lib.rs  router.rs  rules.rs
crates/elena-store/: Cargo.toml  README.md
crates/elena-store/migrations/: 20260417000001_enable_extensions.sql  20260417000002_tenants.sql  20260417000003_threads.sql  20260417000004_messages.sql  20260417000005_budget_state.sql  20260417000006_episodes.sql  20260418000001_thread_approvals.sql  20260418000002_workspaces.sql  20260418000003_audit_events.sql  20260418000004_tenant_allowed_plugins.sql  20260418000005_plugin_ownerships.sql  20260418000006_tenant_credentials.sql  20260424000001_plans.sql  20260424000002_plan_assignments.sql  20260424000003_tenant_admin_scope.sql  20260424000004_thread_usage.sql  20260424000005_episodes_tenant_fk.sql  20260501000001_apps.sql  20260501000002_tenants_app_id.sql  20260501000003_tenants_deleted_at.sql
crates/elena-store/src/: app.rs  approvals.rs  audit.rs  audit_read.rs  cache.rs  episode.rs  lib.rs  pg.rs  plan.rs  plan_assignment.rs  plugin_ownership.rs  rate_limit.rs  redis.rs  sql_error.rs  tenant.rs  tenant_credentials.rs  thread.rs  workspace.rs
crates/elena-store/tests/: phase7_blockers.rs  plans.rs  smoke.rs
crates/elena-tools/: Cargo.toml  README.md
crates/elena-tools/src/: context.rs  lib.rs  orchestrate.rs  registry.rs  tool.rs
crates/elena-types/: Cargo.toml  README.md
crates/elena-types/src/: app.rs  autonomy.rs  cache.rs  error.rs  id.rs  lib.rs  memory.rs  message.rs  model.rs  permission.rs  plan.rs  stream.rs  tenant.rs  terminal.rs  transport.rs  usage.rs
crates/elena-worker/: Cargo.toml  README.md
crates/elena-worker/src/: config.rs  consumer.rs  dispatch.rs  error.rs  lib.rs  main.rs  publisher.rs
deploy/: RUNBOOK.md  alerts.yaml
scripts/: bootstrap.sh  install-hooks.sh  live-e2e-mintjwt.js  live-e2e-runturn.js  live-e2e.sh
(+22 files in other folders)
