[package]
name         = "elena-connector-echo"
version      = "0.1.0"
description  = "Reference Elena plugin sidecar — exposes a single `reverse` action."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

[lib]
name = "elena_connector_echo"
path = "src/lib.rs"

[[bin]]
name = "elena-connector-echo"
path = "src/main.rs"

[dependencies]
elena-plugins = { workspace = true }

tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-stream       = { workspace = true, features = ["net"] }
tonic              = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait        = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
futures            = { workspace = true }
