[package]
name         = "elena-phase1-smoke"
version      = "0.1.0"
description  = "End-to-end smoke test proving Phase 1 works."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
elena-types  = { workspace = true }
elena-config = { workspace = true }
elena-store  = { workspace = true }

tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
