[package]
name         = "elena-phase4-smoke"
version      = "0.1.0"
description  = "End-to-end smoke for Phase 4 (retrieval + memory + routing)."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
elena-types   = { workspace = true }
elena-config  = { workspace = true }
elena-store   = { workspace = true }
elena-llm     = { workspace = true }
elena-tools   = { workspace = true }
elena-context = { workspace = true }
elena-memory  = { workspace = true }
elena-router  = { workspace = true }
elena-core    = { workspace = true }
elena-plugins = { workspace = true }
elena-observability = { workspace = true }

tokio              = { workspace = true }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
secrecy            = { workspace = true }
futures            = { workspace = true }
chrono             = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
