[package]
name         = "elena-phase5-smoke"
version      = "0.1.0"
description  = "End-to-end smoke for Phase 5 (gateway + worker + NATS)."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
elena-types   = { workspace = true }
elena-config  = { workspace = true }
elena-store   = { workspace = true }
elena-llm     = { workspace = true }
elena-tools   = { workspace = true }
elena-context = { workspace = true }
elena-memory  = { workspace = true }
elena-router  = { workspace = true }
elena-core    = { workspace = true }
elena-gateway = { workspace = true }
elena-worker  = { workspace = true }
elena-plugins = { workspace = true }
elena-observability = { workspace = true }

tokio              = { workspace = true }
tokio-util         = { workspace = true }
tokio-tungstenite  = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
secrecy            = { workspace = true }
futures            = { workspace = true }
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
async-nats         = { workspace = true }
jsonwebtoken       = { workspace = true }
axum               = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
wiremock               = { workspace = true }
