[package]
name         = "elena-solen-smoke"
version      = "1.0.0"
description  = "Solen hero scenario end-to-end — multi-tenant Slack + Notion + Sheets + Shopify against real Groq + live sandbox APIs."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

[[bin]]
name = "elena-solen-smoke"
path = "src/main.rs"

[dependencies]
elena-types              = { workspace = true }
elena-config             = { workspace = true }
elena-store              = { workspace = true }
elena-llm                = { workspace = true }
elena-tools              = { workspace = true }
elena-context            = { workspace = true }
elena-memory             = { workspace = true }
elena-router             = { workspace = true }
elena-core               = { workspace = true }
elena-gateway            = { workspace = true }
elena-worker             = { workspace = true }
elena-plugins            = { workspace = true }
elena-observability      = { workspace = true }
elena-auth               = { workspace = true }
elena-connector-slack    = { path = "../elena-connector-slack" }
elena-connector-notion   = { path = "../elena-connector-notion" }
elena-connector-sheets   = { path = "../elena-connector-sheets" }
elena-connector-shopify  = { path = "../elena-connector-shopify" }

tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-util         = { workspace = true }
tokio-tungstenite  = { workspace = true }
tokio-stream       = { workspace = true, features = ["net"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
secrecy            = { workspace = true }
futures            = { workspace = true }
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
async-nats         = { workspace = true }
jsonwebtoken       = { workspace = true }
axum               = { workspace = true }
tonic              = { workspace = true }
reqwest            = { workspace = true }
sqlx               = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
