[package]
name         = "elena-tri-tenant-firetest"
version      = "1.0.0"
description  = "Multi-tenant fire-test — Solen + Hannlys + Omnii driving Elena concurrently against testcontainers, asserting isolation invariants under saturation load."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

[[bin]]
name = "elena-tri-tenant-firetest"
path = "src/main.rs"

[dependencies]
elena-types          = { workspace = true }
elena-config         = { workspace = true }
elena-store          = { workspace = true }
elena-llm            = { workspace = true }
elena-tools          = { workspace = true }
elena-context        = { workspace = true }
elena-router         = { workspace = true }
elena-core           = { workspace = true }
elena-gateway        = { workspace = true }
elena-worker         = { workspace = true }
elena-plugins        = { workspace = true }
elena-observability  = { workspace = true }
elena-auth           = { workspace = true }
elena-connector-echo = { workspace = true }

tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-util         = { workspace = true }
tokio-tungstenite  = { workspace = true }
tokio-stream       = { workspace = true, features = ["net"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
secrecy            = { workspace = true }
futures            = { workspace = true }
async-trait        = { workspace = true }
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
async-nats         = { workspace = true }
jsonwebtoken       = { workspace = true }
axum               = { workspace = true }
tonic              = { workspace = true }
reqwest            = { workspace = true }
sqlx               = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
wiremock               = { workspace = true }
clap = { version = "4", features = ["derive"] }
uuid = { workspace = true }
