[package]
name         = "elena-connector-echo"
version      = "0.1.0"
description  = "Reference Elena plugin connector — exposes a single `reverse` action. Used in-process by elena-embedded-plugins, elena-plugins integration tests, and the phase-7 smoke."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false

[lints]
workspace = true

# Q6 — Pre-Q6 this crate also shipped a `[[bin]]` target so it could
# run as a standalone gRPC sidecar. The only real consumers
# (embedded-plugins, the plugins end-to-end test, the phase-7 smoke)
# all pull in the library form, so the crate now lives under `crates/`
# and the binary target is gone.
[lib]
name = "elena_connector_echo"
path = "src/lib.rs"

[dependencies]
elena-plugins = { workspace = true }

tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-stream       = { workspace = true, features = ["net"] }
tonic              = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait        = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
futures            = { workspace = true }
