[package]
name         = "elena-embedded-plugins"
version      = "0.1.0"
description  = "Host plugin connectors as in-process tonic sidecars on loopback ports."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
elena-plugins = { workspace = true }

# Connector libraries. Adding a plugin here + one arm in `spawn_one` is
# the whole onboarding surface for a new embedded connector.
elena-connector-echo    = { workspace = true }
elena-connector-slack   = { workspace = true }
elena-connector-notion  = { workspace = true }
elena-connector-sheets  = { workspace = true }
elena-connector-shopify = { workspace = true }

tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic        = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
