[package]
name         = "elena-gateway"
version      = "0.1.0"
description  = "HTTP + WebSocket gateway for Elena — JWT auth, NATS work publisher, event fanout."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "elena-gateway"
path = "src/main.rs"

[dependencies]
elena-types         = { workspace = true }
elena-config        = { workspace = true }
elena-store         = { workspace = true }
elena-observability = { workspace = true }
elena-admin         = { workspace = true }

tokio              = { workspace = true }
tokio-util         = { workspace = true }
tokio-stream       = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
secrecy            = { workspace = true }
futures            = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }

axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
async-nats   = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
tokio             = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-tungstenite = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
wiremock               = { workspace = true }
chrono                 = { workspace = true }
