[package]
name         = "elena-llm"
version      = "0.1.0"
description  = "Streaming LLM client for Elena (Anthropic Messages API)."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
elena-types  = { workspace = true }
elena-config = { workspace = true }

tokio            = { workspace = true }
tokio-util       = { workspace = true }
tokio-stream     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
chrono           = { workspace = true }
bytes            = { workspace = true }
secrecy          = { workspace = true }
tracing          = { workspace = true }

reqwest          = { workspace = true }
http             = { workspace = true }
futures          = { workspace = true }
futures-util     = { workspace = true }
pin-project-lite = { workspace = true }
rand             = { workspace = true }
smallvec         = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "macros"] }
wiremock = { workspace = true }
insta    = { workspace = true }
proptest = { workspace = true }
