[package]
name         = "elena-observability"
version      = "0.1.0"
description  = "Observability glue for Elena: Prometheus metrics + OpenTelemetry traces + trace propagation."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }

# Metrics: prometheus crate is stable, lock-free, and doesn't pull the
# whole OTel metrics stack (which is still unstable in Rust).
prometheus = { workspace = true }

# Traces: OpenTelemetry's tracing API *is* stable. Bridge `tracing` → OTel → OTLP.
opentelemetry         = { workspace = true }
opentelemetry_sdk     = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp    = { workspace = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = { workspace = true }
